// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render summary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     with total of 
    $1.50
  </h1>
</div>
`;

exports[`Should render correctly with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expsenses
     with total of 
    $1,141.50
  </h1>
</div>
`;
